--- a/portfolio/experience.css
+++ b/portfolio/experience.css
@@ -1,12 +1,58 @@
 body {
     background-color:black;
     color: white;
+    margin:0px;
 }
+.sticky-container{
+    padding:0px;
+    width:100vw;
+    height:100vh;
+}
+.header{
+    background-color: rgb(56, 60, 61);
+    display: flex;
+    position: fixed;
+    z-index:1;
+    height:60px;
+    width: 100vw;
+    margin:0px;
+    padding:5px;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+.basic {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 40px;
+    width:50vw;
+}
+
+.links{
+    display: flex;
+    width:50vw;
+    justify-content:space-around;
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+ a:hover {
+    background-color: rgb(88, 88, 88);
+    border-radius: 10px;
+}
+ a > h4{
+    padding-right:10px;
+    padding-left:10px;
+ }
+
+
 
 .container {
     display: flex;
-    width: 100wh;
-    height: 100vh;
+    height: 200vh;
+    padding:60px;
     align-items: center;
     justify-content: center;
 }
@@ -29,12 +75,30 @@ body {
     clear:right;
  }
 
+ .bullet { 
+    width:20px;
+    height:20px;
+    background-color: rgb(160, 159, 159);
+    border: 1px solid white;
+    border-radius: 50%;
+    position: relative;
+    bottom: 27vh;
+ }
+
+ .timeline li:nth-child(odd) .bullet {
+    left: 37.2vw;
+ }
+
+ .timeline li:nth-child(even) .bullet {
+    right: 9.88vw;
+ }
+
 .event{
-    border-radius: 5px;
+    border-radius: 10px;
     width: 450px;
     text-align: center;
     background: rgb(55, 55, 55);
-    padding: 10px;
+    padding-bottom: 10px; padding-left: 10px; padding-right: 10px; padding-top: 20px;
     margin-bottom: 25px;
 
 }
@@ -42,4 +106,15 @@ body {
 .event img{
     max-height: 250px;
     max-width: 400px;
+    border: 5px solid rgb(170, 170, 170);
+    border-radius: 7px;
+}
+
+.vl {
+    position:absolute;
+    border-right:5px solid gray;
+    border-radius:2px;
+    margin:0px;
+    left:50vw;
+    height: 310vh;
 }
