--- a/portfolio/styles/hero.css
+++ b/portfolio/styles/hero.css
@@ -6,43 +6,14 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-.header{
-    background-color: rgb(56, 60, 61);
-    display: flex;
-    position: fixed;
-    z-index: 1;
-    height: 60px;
-    width: 100vw;
-    padding: 5px;
-    align-items: center;
+.intro {
+    height:80vh;
+    background-image: url("photos/me.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
 }
 
-.basic {
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 40px;
-    width: 50vw;
-}
-
-.links{
-    display: flex;
-    width: 50vw;
-    justify-content:space-around;
-}
-.header a {
-    color: white;
-    text-decoration: none;
-}
- .header a:hover {
-    background-color: rgb(88, 88, 88);
-    border-radius: 10px;
-}
- .header a > h4{
-    padding-right: 10px;
-    padding-left: 10px;
- }
-
-.content {
+/* .content {
     padding-top: 70px;
     margin: 0px
 }
@@ -70,8 +41,16 @@ body {
     position: absolute;
     top: 45vh;
     left: 13vw
+} */
+.bg-teal {
+    background-color: rgb(0, 207, 207);
 }
 
+.contact {
+    margin-top:90px;
+    margin-bottom:50px;
+}
+/* 
 .contact {
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -105,4 +84,4 @@ body {
  .UTR {
     text-align: center;
     grid-column: 3;
- }
+ } */
