--- a/portfolio/styles/hero.css
+++ b/portfolio/styles/hero.css
@@ -1,4 +1,4 @@
-
+/* || Hero */
 .intro {
     height:80vh;
     color: white;
@@ -7,35 +7,14 @@
     background-repeat: no-repeat;
 }
 
-/* .content {
-    padding-top: 70px;
-    margin: 0px
-}
-.content > img{
-    width: 50vw;
-    height: 100vh;
-    float: right;
+@media (max-width: 768px)
+{
+    .intro {
+        background-image: url("/Users/derek/Desktop/ATCS/ATCS-2022/portfolio/photos/me2.png");
+    }
 }
 
-.info {
-    width: 48.5vw;
-    text-align: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center; 
-}
-
-.info img{
-    width: 45vw;
-    height: 90vh;
-}
-
-.middle {
-    position: absolute;
-    top: 45vh;
-    left: 13vw
-} */
+/* Contact */
 .bg-teal {
     background-color: rgb(0, 207, 207);
 }
@@ -44,45 +23,3 @@
     margin-top:90px;
     margin-bottom:50px;
 }
-
-@media (max-width: 768px)
-{
-    .intro {
-        background-image: url("/Users/derek/Desktop/ATCS/ATCS-2022/portfolio/photos/win.png");
-    }
-}
-/* 
-.contact {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    padding-top: 30px;
- }
- 
- .contact img {
-    max-height: 33%;
- }
-
-.contact h1 {
-    grid-column: 2;
-    text-align: center;
-    padding-bottom: 30px;
-}
-
- .contact a {
-    color: rgb(3, 187, 187);
- }
- 
- .phone {
-    text-align: center;
-    grid-column: 1;
- }
-
- .mail {
-    text-align: center;
-    grid-column: 2;
- }
-
- .UTR {
-    text-align: center;
-    grid-column: 3;
- } */
