--- a/portfolio/styles/style.css
+++ b/portfolio/styles/style.css
@@ -1,3 +1,4 @@
+/* || General Styles */
 body {
     background-color: rgb(6, 6, 6);
     color: white;
@@ -5,5 +6,4 @@ body {
     overflow: visible;
     font-family: 'Courier New', Courier, monospace;
 }
-
 
