--- a/portfolio/styles/hero.css
+++ b/portfolio/styles/hero.css
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
 }
 
+/* Small Media */
 @media (max-width: 768px)
 {
     .intro {
@@ -14,12 +15,12 @@
     }
 }
 
-/* Contact */
-.bg-teal {
-    background-color: rgb(0, 207, 207);
-}
-
+/* || Contact */
 .contact {
     margin-top:90px;
     margin-bottom:50px;
+}
+
+.bg-teal {
+    background-color: rgb(0, 207, 207);
 }
